fix problems with the grid layout and alignment and make overflow possible

--- a/src/app/control-page/control-page.component.css
+++ b/src/app/control-page/control-page.component.css
@@ -6,8 +6,6 @@ ul {
 
 .grid-list  {
   display: grid;
-  grid-gap: 800px;
-  max-width: 200px;
   float: left;
-  padding: 30px;
+  padding: 8px;
 }
